@@ -12,8 +12,9 @@ class UidEventZCMLLayer:
         zcml.load_config('event.zcml', Products.Five)
         zcml.load_config('event.zcml', Products.CMFUid)
         setHooks()
+    setUp = testSetUp  # forward-compatibility for Zope 2.11+ testrunner
 
     @classmethod
     def testTearDown(cls):
         cleanUp()
-
+    tearDown = testTearDown  # forward-compatibility for Zope 2.11+ testrunner
