@@ -2,6 +2,9 @@ CMF 2.1.0-beta2 (unreleased)
 
   Bug Fixes
 
+    - Added forward-compatibility fix for running tests under the
+      testrunner shipped with Zope 2.11.
+
     - Allow customization from DirectoryViews to be redirected into
       alternate folders, and use manually-built clones.
       (http://www.zope.org/Collectors/CMF/382)
